--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -233,6 +233,10 @@
     {
       "matches": ["*://*/*.mp3", "*://*/*.mp3?*"],
       "js": ["shared.js", "keysocket-builtin-player.js"]
+    },
+    {
+      "matches": ["*://*/index.view"],
+      "js": ["shared.js", "keysocket-subsonic.js"]
     }
   ]
 }
